# Camdroid

./: .gitignore  gradle.properties  settings.gradle
FvshareTrack/src/androidTest/java/com/fvshare/track/: ExampleInstrumentedTest.java
FvshareTrack/src/main/: AndroidManifest.xml
FvshareTrack/src/main/java/com/freevisiontech/tracking/: FVTrackObserver  ObjTracking  TrackConfig
FvshareTrack/src/main/res/values/: strings.xml
FvshareTrack/src/test/java/com/fvshare/track/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hoeoi/lgbTrack/: LgbTrack.java  TrackView.java
app/src/main/java/org/hschott/camdroid/: CameraActivity.java  CameraManager.java  CameraPreviewView.java  FpsMeter.java  ProcessFramesView.java
app/src/main/jni/: lgbTrackJni.cpp
app/src/main/lgbTrack/: LGBTrack.cpp  LGBTrack.hpp
app/src/main/lgbTrack/CMT/: CMakeLists.txt
app/src/main/lgbTrack/KCFTracker/: CMakeLists.txt  LGBTrackControl.cpp  kcftracker.cpp
app/src/main/res/layout/: camera.xml
captures/: org.hschott.camdroid_2019.06.13_19.20.li  org.hschott.camdroid_2019.06.13_19.29.li  org.hschott.camdroid_2019.06.13_20.01.li  org.hschott.camdroid_2019.06.13_20.11.li  org.hschott.camdroid_2019.06.13_20.59.li  org.hschott.camdroid_2019.06.14_11.01.li  org.hschott.camdroid_2019.06.14_11.12.li  org.hschott.camdroid_2019.06.14_11.13.li  org.hschott.camdroid_2019.06.14_11.16.li  org.hschott.camdroid_2019.07.14_10.02.li
lgbtrack/: CMakeLists.txt  build.gradle
lgbtrack/src/androidTest/java/com/hoeoi/lgbTrack/: ExampleInstrumentedTest.java
lgbtrack/src/main/: AndroidManifest.xml
lgbtrack/src/main/java/com/hoeoi/lgbTrack/: FpsMeter.java  LgbTrack.java  LgbTrackCallback.java  TrackView.java  TrackViewCallback.java
lgbtrack/src/main/jni/: lgbTrackJni.cpp
lgbtrack/src/main/lgbTrack/: LGBTrack.cpp  LgbConfig.h
lgbtrack/src/main/lgbTrack/CMT/: CMT.cpp
lgbtrack/src/main/lgbTrack/KCFTracker/: LGBTrackControl.hpp  ffttools.hpp
lgbtrack/src/main/res/values/: strings.xml
lgbtrack/src/test/java/com/hoeoi/lgbTrack/: ExampleUnitTest.java
(+1 files in other folders)
